force-app/main/default/objects/Tracked_Object__mdt/Tracked_Object__mdt.object-meta.xml
<CustomObject>
    <label>Tracked Object</label>
    <pluralLabel>Tracked Objects</pluralLabel>
</CustomObject>