force-app/main/default/objects/Tracked_Object__mdt/fields/Additional_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Field_1__c</fullName>
    <description>Used to identify the record when tracking insert, deletes, and undeletes</description>
    <label>Additional Field 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>