force-app/main/default/objects/Tracked_Object__mdt/fields/Parent_Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Reference_Field__c</fullName>
    <label>Parent Reference Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>