force-app/main/default/objects/Tracked_Object__mdt/fields/Track_Create__c.field-meta.xml
<CustomField>
    <fullName>Track_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Create</label>
    <type>Checkbox</type>
</CustomField>