force-app/main/default/objects/Tracked_Object__mdt/fields/Track_Undelete__c.field-meta.xml
<CustomField>
    <fullName>Track_Undelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Undelete</label>
    <type>Checkbox</type>
</CustomField>