force-app/main/default/objects/Tracked_Object__mdt/validationRules/Parent_Reference_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Parent_Reference_Required</fullName>
    <active>true</active>
    <description>When tracking create, delete, and undelete, a parent record is required or records will be orphaned.</description>
    <errorConditionFormula>AND(
ISBLANK(Parent_Reference_Field__c),
OR(
 Track_Create__c,
 Track_Delete__c ,
 Track_Undelete__c 
))</errorConditionFormula>
    <errorDisplayField>Parent_Reference_Field__c</errorDisplayField>
    <errorMessage>A Parent reference field must be defined to track create, delete, and undelete.</errorMessage>
</ValidationRule>